--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.5",
+    "framer-motion": "^11.11.9",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "recharts": "^2.13.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
